@@ -17,3 +17,6 @@ Release 0.4 -> Release 0.5
 
 2002-01-10 Michael Still mikal@stillhq.com
 	Implemented page durations.
+
+2002-01-12 Michael Still mikal@stillhq.com
+	Implemented page transitions effects. There are now 17 page transition effects available if you wanted to build PDFs into presentations.
